# corporate-systems-programming

./: .dockerignore  otchet.docx  readme.md
KR1/: main.cpp  my_program
cmake/: README.txt
include/inventory/: memory_store.h  transaction.h
inventory_manager/: CMakeLists.txt  Dockerfile
inventory_manager/docker/: docker-entrypoint.sh
inventory_manager/include/inventory/: inventory_facade.h  order.h  product.h
inventory_manager/src/: product.cpp  transaction.cpp
inventory_manager/tests/: CMakeLists.txt
inventory_manager/tests/helpers/: test_helpers.h
inventory_manager/tests/scenarios/: scenario_02_list_products.cpp  scenario_03_income_flow.cpp  scenario_07_error_handling.cpp
inventory_manager/tests/unit/: test_inventory_facade.cpp  test_memory_store.cpp  test_order.cpp  test_product.cpp  test_transaction.cpp
src/: inventory_facade.cpp  main.cpp  memory_store.cpp  order.cpp
tests/: CMakeLists.txt
tests/helpers/: scenario_runner.h
tests/scenarios/: scenario_01_add_product.cpp  scenario_04_expense_flow.cpp  scenario_05_replenishment_draft.cpp  scenario_06_full_cycle.cpp
tests/unit/: test_inventory_facade.cpp  test_memory_store.cpp  test_order.cpp  test_product.cpp  test_transaction.cpp
